--- a/Views/Shared/_LayoutPage1.cshtml
+++ b/Views/Shared/_LayoutPage1.cshtml
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="~/assets/images/logo/cinema-logo.png" type="image/png">
     <title>Ohayou Cinema</title>
     <link rel="stylesheet" href="~/Content/bootstrap.min.css">
     <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="~/assets/css/test.css">
+    <link rel="stylesheet" href="~/assets/css/layout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -30,76 +31,14 @@
                                 <li class="movie-sta-text-1 py-1"><a href="#">PHIM ĐANG CHIẾU</a></li>
                                 <div class="movie-list py-1">
                                     <div class="row">
-                                        <div class="col-md-3">
-                                            <img src="~/assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé
-                                            </button>
-                                            <a href="#" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="~/assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé
-                                            </button>
-                                            <a href="#" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="~/assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé
-                                            </button>
-                                            <a href="#" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="~/assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé
-                                            </button>
-                                            <a href="#" class="text-dark-emphasis movie-name py-1">Dune 2</a>
-                                        </div>
+                                        @RenderSection("Phimdangchieu", required: false)
                                     </div>
                                 </div>
 
                                 <li class="movie-sta-text-2 py-1"><a href="#">PHIM SẮP CHIẾU</a></li>
                                 <div class="movie-list py-1">
                                     <div class="row">
-                                        <div class="col-md-3">
-                                            <img src="~/assets/images/movie/exhuma.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé
-                                            </button>
-                                            <a href="#" class="text-dark-emphasis movie-name">Exhuma: Quật mộ trùng ma</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="~/assets/images/movie/kungfu-panda-4.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé
-                                            </button>
-                                            <a href="#" class="text-dark-emphasis movie-name">KungFu Panda 4</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="~/assets/images/movie/qu-co-thua-ke-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé
-                                            </button>
-                                            <a href="#" class="text-dark-emphasis movie-name">Quý cô thừa kế 2</a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <img src="~/assets/images/movie/dune-2.jpg" alt="" class="img-fluid img-movie">
-                                            <button class="buy-ticket-btn btn">
-                                                <i class="ti-ticket"></i>
-                                                Mua vé
-                                            </button>
-                                            <a href="#" class="text-dark-emphasis movie-name py-1">Dune 2</a>
-                                        </div>
+                                        @RenderSection("Phimsapchieu", required: false)
                                     </div>
                                 </div>
                             </ul>
@@ -203,7 +142,7 @@
 
     <div class="slider">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
+            <div class="carousel-indicators slider-btn">
                 <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -231,6 +170,22 @@
     </div>
     <div class="content">
         @RenderBody()
+        <ul class="stt-movie-list">
+            <span class="px-4">
+                PHIM
+            </span>
+            <li class="stt-movie-item">
+                <a class="nav-link text-dark-emphasis" href="">Đang chiếu</a>
+            </li>
+            <li class="stt-movie-item">
+                <a class="nav-link text-dark-emphasis" href="">Sắp chiếu</a>
+            </li>
+        </ul>
+        <div class="movie-list">
+            <div class="row">
+                @RenderSection("AllPhimdangchieu", required: false)
+            </div>
+        </div>
     </div>
     <div class="footer">
 
