--- a/FE_Q/assets/css/userstyle.css
+++ b/FE_Q/assets/css/userstyle.css
@@ -365,9 +365,12 @@
     font-weight: 500;
     color:dimgray;
 }
-.form input{
+
+.remove{
     pointer-events: none;
-}
+}    
+
+
 .form-group .form{
     margin-top: 10px;
 }
