--- a/Areas/User/Views/UserHome/UserProfile.cshtml
+++ b/Areas/User/Views/UserHome/UserProfile.cshtml
@@ -1,15 +1,98 @@
-﻿
-@{
-    ViewBag.Title = "UserProfile";
-    Layout = "~/Areas/User/Views/Shared/_UserLayout.cshtml";
-}
-
-
-
-@model CinemaWeb.Areas.User.Controllers.UserAccountController
+﻿@model CinemaWeb.Areas.User.Controllers.UserHomeController
 
 @{
     CinemaWeb.Models.user currentUser = (CinemaWeb.Models.user)HttpContext.Current.Session["user"];
+}
+
+@section UserName {
+    <div class="user_name  row1 " style="font-weight: 600; font-size: small;">
+        <img class="icon" src="~/Areas/User/assets/images/logo/logomini.png" alt="">
+        @currentUser.full_name
+    </div>
+    <div class="row1" style="font-size: small; font-weight: 500;">
+        <img class="icon" src="~/Areas/User/assets/images/logo/icon-gift.190935e4.png" alt="">
+        0 Star
+    </div>
+}
+
+@section Phimdangchieu {
+    @if (ViewBag.MovieList != null)
+    {
+        var count = 0;
+        var rowCount = 0;
+        foreach (var movie in ViewBag.MovieList)
+        {
+            if (count % 4 == 0)
+            {
+                if (rowCount > 0)
+                {
+                    @:</div> <!-- Close previous row -->
+                }
+                @:<div class="row">
+ <!-- Open a new row -->
+                    rowCount++;
+                }
+                if (movie.movie_status == true && count < 4)
+                {
+                    <div class="col-md-3 sub-movie-list">
+                        <img src="@movie.url_image" alt="" class="img-fluid img-movie">
+                        <button class="buy-ticket-btn btn">
+                            <i class="ti-ticket"></i>
+                            Mua vé
+                        </button>
+                        <a href="#" class="text-dark-emphasis movie-name">@movie.title</a>
+                    </div>
+                    count++;
+                }
+            }
+            if (rowCount > 0)
+            {
+            @:</div> <!-- Close the last row -->
+        }
+    }
+}
+
+
+@section AllPhimdangchieu {
+    @if (ViewBag.MovieList != null)
+    {
+        foreach (var movie in ViewBag.MovieList)
+        {
+            if (movie.movie_status == true)
+            {
+                <div class="col-md-3 sub-movie-list">
+                    <img src="@movie.url_image" alt="" class="img-fluid img-movie">
+                    <button class="buy-ticket-btn btn">
+                        <i class="ti-ticket"></i>
+                        Mua vé
+                    </button>
+                    <a href="#" class="text-dark-emphasis movie-name">@movie.title</a>
+                </div>
+            }
+        }
+    }
+}
+
+@section Phimsapchieu {
+    @if (ViewBag.MovieList != null)
+    {
+        var count = 0;
+        foreach (var movie in ViewBag.MovieList)
+        {
+            if (movie.movie_status == false && count < 4)
+            {
+                <div class="col-md-3 sub-movie-list">
+                    <img src="@movie.url_image" alt="" class="img-fluid img-movie">
+                    <button class="buy-ticket-btn btn">
+                        <i class="ti-ticket"></i>
+                        Mua vé
+                    </button>
+                    <a href="#" class="text-dark-emphasis movie-name">@movie.title</a>
+                </div>
+                count++;
+            }
+        }
+    }
 }
 
 @section UserProfile {
@@ -222,7 +305,7 @@
                             <div class="form-group">
                                 <label for="date">Date of birth</label>
                                 <div class="form">
-                                    <input type="date" required placeholder="@currentUser.date_of_birth">
+                                    <input type="text" required placeholder="@currentUser.date_of_birth">
                                 </div>
                             </div>
                         </div>
@@ -231,7 +314,7 @@
                             <div class="form-group">
                                 <label for="phonnum">Phone number</label>
                                 <div class="form">
-                                    <input type="tel" required placeholder="@currentUser.user_phone">
+                                    <input type="text" required placeholder="@currentUser.user_phone">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -247,9 +330,6 @@
                     </div>
 
                 </div>
-
-
-
             </div>
 
         </div>
@@ -257,140 +337,6 @@
     </div>
 }
 
-<!--<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="~/assets/images/logo/cinema-logo.png" type="image/png">
-    <title>Ohayou Cinema</title>
-    <link rel="stylesheet" href="~/Content/bootstrap.min.css">
-    <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="~/Areas/User/assets/css/userstyle.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-    <div class="header">
-        <div class="container-fluid  p-4">
-            <div class="row align-items-center">
-                <div class="col-md-2 px-5 py-1">
-                    <img src="~/assets/images/logo/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
-                </div>
-                <div class="col-md-2 buyticket-area">
-                    <button type="button" class="buyticket-btn btn">
-                        <img src="~/assets/images/subimg/btn-ticket.png" alt="" class="img-buy-btn img-fluid">
-                    </button>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-gr-1 list-group list-group-horizontal">
-                        <li class="list-group-item movie-area">
-                            Phim
-                            <i class="ti-angle-down down-btn"></i>
-                            <ul class="movie-status list-group">
-                                <li class="movie-sta-text-1 py-1"><a href="#">PHIM ĐANG CHIẾU</a></li>
-                                <div class="movie-list py-1">
-                                    <div class="row">-->
-@*@RenderSection("Phimdangchieu", required: false)*@
-<!--</div>
-</div>
-
-<li class="movie-sta-text-2 py-1"><a href="#">PHIM SẮP CHIẾU</a></li>
-<div class="movie-list py-1">
-    <div class="row">-->
-@*@RenderSection("Phimsapchieu", required: false)*@
-<!--</div>
-                                </div>
-                            </ul>
-                        </li>
-
-                        <li class="list-group-item cinema-corner text-center">
-                            Góc Điện Ảnh
-                            <i class="ti-angle-down down-btn"></i>
-                            <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Thể loại phim</a></li>
-                                <li><a href="#">Diễn viên</a></li>
-                                <li><a href="#">Đạo diễn</a></li>
-                                <li><a href="#">Bình luận phim</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="list-group-item event-list text-center">
-                            Sự Kiện
-                            <i class="ti-angle-down down-btn"></i>
-                            <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Ưu đãi</a></li>
-                                <li><a href="#">Phim hay tháng</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="list-group-item ticket-price text-center">
-                            Rạp/Giá vé
-                            <i class="ti-angle-down down-btn"></i>
-                            <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Rạp Đà Nẵng</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-1">
-                    <button class="search-btn btn">
-                        <i class="search-icon ti-search"></i>
-                    </button>
-                </div>
-                <div class="login-area col-md-3">
-                    <div class="row">
-                        <div class="col-auto">
-                            <div class="show-login js-show-login">
-                                <div class="account-wrapper">
-                                    <img src="~/assets/images/subimg/account.png" alt="" class="img-fluid account-img">
-                                    <ul class="list-group account-list">
-                                        <li class="list-group-item">
-                                            <a href="#">
-                                                <i class="fa-solid fa-id-badge account-icon"></i>
-                                                Tài Khoản
-                                            </a>
-                                        </li>
-                                        <li class="list-group-item">
-                                            <a href="#">
-                                                <i class="fa-solid fa-list-ol account-icon"></i>
-                                                Lịch Sử
-                                            </a>
-                                        </li>
-                                        <li class="list-group-item">
-                                            <a href="/Home/SignOut" class="js-logout">
-                                                <i class="fa-solid fa-arrow-right-from-bracket account-icon"></i>
-                                                Đăng Xuất
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-auto">
-                            <div class="user_name  row1 " style="font-weight: 600; font-size: small;">
-                                <img class="icon" src="~/Areas/User/assets/images/logo/logomini.png" alt="">
-                                Võ Lê Quyên
-                            </div>
-                            <div class="row1" style="font-size: small; font-weight: 500;">
-                                <img class="icon" src="~/Areas/User/assets/images/logo/icon-gift.190935e4.png" alt="">
-                                0 Star
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="footer">
-
-    </div>
-    <script src="~/Areas/User/assets/js/userscripts.js"></script>
-    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
-
-</body>
-</html-->
 >
 
 
