--- a/Areas/User/assets/css/userstyle.css
+++ b/Areas/User/assets/css/userstyle.css
@@ -7,11 +7,12 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.buyticket-area {
+.header {
+    background-color: #fff;
 }
 
 .buyticket-btn {
-    font-size: 15px;
+    font-size: 20px;
     color: #fff;
     border: none;
 }
@@ -148,7 +149,8 @@
     }
 
 .search-icon {
-    font-size: 14px;
+    font-size: 15px;
+    font-weight: 500;
 }
 
 .search-btn {
@@ -164,26 +166,9 @@
     color: #f29538;
 }
 
-/* Login */
-.login-area {
-    display: flex;
-}
-
 .account-wrapper {
     position: relative;
 }
-
-.account-img {
-    width: 75px;
-    height: auto;
-    padding: 10px 20px;
-}
-
-/*.col-auto .icon {
-    width: 20px;
-    height: auto;
-    margin-right: 5px;
-}*/
 
 .account-list li:hover a {
     color: #F26B38;
@@ -209,357 +194,17 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.account-icon {
-    padding-right: 10px;
-}
 
 .account-wrapper:hover .account-list {
     display: block;
 }
 
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.4);
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    height: 100vh;
-    display: none;
-}
 
-    .modal.open {
-        display: flex;
-    }
-
-.login-container {
-    background-color: #fff;
-    border-radius: 30px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
-    position: relative;
-    overflow: hidden;
-    width: 768px;
-    max-width: 100%;
-    min-height: 480px;
-    animation: ModalFadeIn ease 0.4s;
-}
-
-@keyframes ModalFadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(-100px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-.login-btn {
-    font-size: 14px;
-    margin-left: -48px;
-    color: #777777;
-    border: none;
-}
-
-
-    .login-btn:hover {
-        cursor: pointer;
-        color: #f29538;
-    }
-
-.login-container p {
-    font-size: 14px;
-    /* line-height: 20; */
-    letter-spacing: 0.3px;
-    margin: 20px 0;
-}
-
-.login-container span {
-    font-size: 12px;
-}
-
-.login-container a {
-    color: #333;
-    font-size: 13px;
-    text-decoration: none;
-    margin: 15px 0 10px;
-}
-
-.login-container button {
-    background-color: #F26B38;
-    color: #fff;
-    font-size: 12px;
-    padding: 10px 45px;
-    border: 1px solid transparent;
-    border-radius: 8px;
-    font-weight: 600;
-    letter-spacing: 0.5px;
-    text-transform: uppercase;
-    margin-top: 10px;
-    cursor: pointer;
-}
-
-.form-container button:hover {
-    cursor: pointer;
-    color: white;
-    background-color: #f29538;
-}
-
-.login-container button.hidden {
-    background-color: transparent;
-    border-color: #fff;
-}
-
-    .login-container button.hidden:hover {
-        cursor: pointer;
-        background-color: #f29538;
-        color: white;
-        border-color: #fff;
-    }
-
-.login-container form {
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    height: 100%;
-}
-
-.login-container input {
-    background-color: #eee;
-    border: none;
-    margin: 8px 0;
-    padding: 10px 15px;
-    font-size: 13px;
-    border-radius: 8px;
-    width: 100%;
-    outline: none;
-}
-
-.form-container {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    transition: all 0.6s ease-in-out;
-}
-
-.sign-in {
-    left: 0;
-    width: 50%;
-    z-index: 2;
-}
-
-.login-container.active .sign-in {
-    transform: translateX(100%);
-}
-
-.sign-up {
-    left: 0;
-    width: 50%;
-    opacity: 0;
-    z-index: 1;
-}
-
-.login-container.active .sign-up {
-    transform: translateX(100%);
-    opacity: 1;
-    z-index: 5;
-    animation: move 0.6s;
-}
-
-@keyframes move {
-    0%, 49.99% {
-        opacity: 0;
-        z-index: 1;
-    }
-
-    50%, 100% {
-        opacity: 1;
-        z-index: 5;
-    }
-}
-
-.toggle-container {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    transition: all 0.6s ease-in-out;
-    border-radius: 150px 0 0 100px;
-    z-index: 1000;
-}
-
-.login-container.active .toggle-container {
-    transform: translateX(-100%);
-    border-radius: 0 150px 100px 0;
-}
-
-.toggle {
-    background-color: #F26B38;
-    height: 100%;
-    background: linear-gradient(to right,#f29538,#F26B38);
-    color: #fff;
-    position: relative;
-    left: -100%;
-    height: 100%;
-    width: 200%;
-    transform: translateX(0);
-    transition: all 0.6s ease-in-out;
-}
-
-.login-container.active .toggle {
-    transform: translateX(50%);
-}
-
-.toggle-panel {
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 30px;
-    text-align: center;
-    top: 0;
-    transform: translateX(0);
-    transition: all 0.6s ease-in-out;
-}
-
-.toggle-left {
-    transform: translateX(-200%);
-}
-
-.login-container.active .toggle-left {
-    transform: translateX(0);
-}
-
-.toggle-right {
-    right: 0;
-    transform: translateX(0);
-}
-
-.login-container.active .toggle-right {
-    transform: translateX(200%);
-}
-
-.g-star-img {
-    width: 100px;
-    height: auto;
-}
-
-/* Slider */
-.slider {
-    padding: 10px 40px;
-}
-
-.slider-btn {
-    z-index: 1;
-}
-
-.carousel-control-prev {
-    padding-right: 130px;
-}
-
-.carousel-control-next {
-    padding-left: 130px;
-}
-
-/* Content */
-
-.stt-movie-list {
-    display: flex;
-    list-style: none;
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-
-.stt-movie-item {
-    display: inline-block;
-    margin-right: 40px;
-    /*line-height: 2;*/
-    font-size: 15px;
-}
-
-    .stt-movie-item a {
-        padding-top: 0%;
-        background-color: white;
-        border: white;
-        color: #000;
-    }
-
-        .stt-movie-item a:hover {
-            background-color: white;
-            border: white;
-            color: #F26B38;
-        }
-
-        .stt-movie-item a:active {
-            color: #F26B38;
-        }
-
-
-    .stt-movie-item:hover {
-        cursor: pointer;
-        color: #F26B38;
-    }
-
-.content {
-    margin-left: 145px;
-    margin-right: 145px;
-}
-/*
-.content-movie-list .movie-item {
-    position: relative;
-    padding-bottom: 35px;
-}
-
-.content-movie-list .buy-ticket-btn {
-    display: none;
-    border: none;
-    width: 120px;
-    height: 35px;
-    background-color: #F26B38;
-    color: #fff;
-    position: absolute;
-    left: 50%;
-    top: 45%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-}
-
-.content-movie-list .buy-ticket-btn:hover ~ .img-movie,
-.content-movie-list .img-movie:hover {
-    filter: brightness(65%);
-}
-
-.content-movie-list .img-movie:hover + .buy-ticket-btn,
-.content-movie-list .buy-ticket-btn:hover {
-    display: flex;
-}
-
-.content-movie-list .buy-ticket-btn:hover {
-    background-color: #f29538;
-}*/
-
-.movie-list a {
-    text-decoration: none;
-    color: #000;
-    font-weight: 500;
-}
-
-.container .col-md-5 {
+/*user*/
+/* 
+.container .col-md-5{
     background-color: gray;
-}
+} */
 
 .col-auto .icon {
     width: 20px;
@@ -658,10 +303,10 @@
     display: block;
 }
 
-.container .row .col-md-5 {
+/* .container .row .col-md-5
+{
     background-color: #fff;
-}
-
+} */
 .container .row {
     margin-bottom: 30px;
 }
@@ -782,3 +427,8 @@
 .modal .p {
     font-weight: normal;
 }
+
+/* .container {
+    background-color: #777777;
+    position: relative;
+} */
