--- a/Areas/User/Views/UserHome/UserProfile.cshtml
+++ b/Areas/User/Views/UserHome/UserProfile.cshtml
@@ -1,4 +1,8 @@
-﻿@model CinemaWeb.Areas.User.Controllers.UserHomeController
+﻿@{
+    Layout = "~/Areas/User/Views/Shared/_UserLayout.cshtml";
+}
+
+@model CinemaWeb.Areas.User.Controllers.UserHomeController
 
 @{
     CinemaWeb.Models.user currentUser = (CinemaWeb.Models.user)HttpContext.Current.Session["user"];
